<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f1edfd"
    tools:context=".PermissionHandling">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/application_permissions"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/SMSText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/sms_access"
            android:textColor="#616161"
            android:textSize="13sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/SMSRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="8dp"
            android:background="#2196F3"
            android:text="Request"
            android:textColor="#212121"
            android:textSize="9sp"
            tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,SmallSp,TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/PhoneStateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone_state_access"
            android:textColor="#616161"
            android:textSize="13sp" />

        <Button
            android:id="@+id/PhoneStateRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginTop="8dp"
            android:background="#2196F3"
            android:text="@string/request"
            android:textColor="#212121"
            android:textSize="9sp"
            tools:ignore="DuplicateSpeakableTextCheck,SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/VibrateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/vibrate_access"
            android:textColor="#616161"
            android:textSize="13sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/VibrateRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:background="#2196F3"
            android:text="@string/request"
            android:textColor="#212121"
            android:textSize="9sp"
            tools:ignore="DuplicateSpeakableTextCheck,SmallSp,TextSizeCheck" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/InternetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/internet_access"
            android:textColor="#616161"
            android:textSize="13sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/InternetRequestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="8dp"
            android:background="#2196F3"
            android:text="Request"
            android:textColor="#212121"
            android:textSize="9sp"
            tools:ignore="HardcodedText,SmallSp,TextSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="100dp"
        android:text="@string/back" />

</LinearLayout>
